--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,13 @@
     app:alignItems="stretch">
 <!--    <include layout="@layout/home"/>-->
 
+    <Button
+        android:id="@+id/rmitry"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="try">
 
+    </Button>
     <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
