--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,37 @@
-<com.google.android.flexbox.FlexboxLayout
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_marginBottom="70dp">
+<com.google.android.flexbox.FlexboxLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.analysis.AnalysisFragment"
     app:flexDirection="column"
     app:alignContent="stretch"
-    app:alignItems="stretch">
+    app:alignItems="flex_end"
+    android:id="@+id/content">
 <!--    <include layout="@layout/home"/>-->
 
-    <Button
-        android:id="@+id/rmitry"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="try">
+<!--    <Button-->
+<!--        android:id="@+id/rmitry"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="try">-->
 
-    </Button>
+<!--    </Button>-->
     <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -27,11 +42,14 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/mobile_navigation" />
 
+
+</com.google.android.flexbox.FlexboxLayout>
+</ScrollView>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         app:menu="@menu/bottom_navigation_menu"
-        android:layout_below="@id/nav_host_fragment"/>
-
-</com.google.android.flexbox.FlexboxLayout>
+        app:layout_alignSelf="flex_end"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
