--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -8,8 +8,13 @@
     <item
         android:id="@+id/navigation_editor"
         android:enabled="true"
-        android:icon="@drawable/ic_baseline_history_24"
+        android:icon="@drawable/ic_baseline_edit_24"
         android:title="@string/title_edior"/>
+    <item
+        android:id="@+id/navigation_documents"
+        android:enabled="true"
+        android:icon="@drawable/ic_baseline_history_24"
+        android:title="@string/title_documents"/>
 <!--    <item-->
 <!--        android:id="@+id/page_3"-->
 <!--        android:enabled="true"-->
