--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:layout_marginBottom="70dp">
-<com.google.android.flexbox.FlexboxLayout
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.analysis.AnalysisFragment"
-    app:flexDirection="column"
-    app:alignContent="stretch"
-    app:alignItems="flex_end"
-    android:id="@+id/content">
+
 <!--    <include layout="@layout/home"/>-->
 
 <!--    <Button-->
@@ -36,15 +21,14 @@
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
 
         app:layout_flexGrow="1"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/mobile_navigation" />
+        app:navGraph="@navigation/mobile_navigation"
+        android:layout_marginBottom="70dp"
+        />
 
-
-</com.google.android.flexbox.FlexboxLayout>
-</ScrollView>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
