--- a/app/src/main/res/layout/document_item.xml
+++ b/app/src/main/res/layout/document_item.xml
@@ -18,7 +18,7 @@
     <Button
         android:id="@+id/popup_menu"
         android:background="@android:color/transparent"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
