--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -15,6 +15,12 @@
         android:enabled="true"
         android:icon="@drawable/ic_baseline_history_24"
         android:title="@string/title_documents"/>
+
+    <item
+        android:id="@+id/navigation_settings"
+        android:enabled="true"
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="@string/title_settings"/>
 <!--    <item-->
 <!--        android:id="@+id/page_3"-->
 <!--        android:enabled="true"-->
