--- a/app/src/main/res/menu/documents_menu.xml
+++ b/app/src/main/res/menu/documents_menu.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/one"
+        android:id="@+id/edit"
         android:title="Edit" />
     <item
-        android:id="@+id/two"
+        android:id="@+id/share"
         android:title="Share" />
     <item
-        android:id="@+id/three"
+        android:id="@+id/delete"
         android:title="Delete" />
     <item
-        android:id="@+id/four"
-        android:title="Share" />
+        android:id="@+id/search"
+        android:title="Search" />
+    <item
+        android:id="@+id/export"
+        android:title="Export" />
 </menu>
